fix: Silence Detection decouple